--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
-/* Write your CSS here! */
+body {
+        display: block;
+        margin-top: 8px;
+        margin-bottom: 8px;
+        margin-right: 8px;
+        margin-left: 8px;
+}
+
+#mainHeading {
+    text-align: center;
+    font-size: 2.5em;
+    color: red;
+}
+
+.funParagraph {
+    color: green
+}
