--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,6 @@
 body {
         display: block;
-        margin-top: 8px;
-        margin-bottom: 8px;
-        margin-right: 8px;
-        margin-left: 8px;
+        margin: 8px
 }
 
 #mainHeading {
